--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
                     </tr>
                     {% endfor %}
                     <tr style="font-weight:900; color:var(--accent);">
-                        <td>Unique Combined</td>
+                        <td>Total</td>
                         <td>{{ person.total_unique }}</td>
                         <td>{{ "%.1f"|format(person.avg_rating) }}</td>
                     </tr>
